--- a/notebooks/exploration.ipynb
+++ b/notebooks/exploration.ipynb
@@ -2,12 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
     "import fastf1\n",
-    "import plotly.express as px\n"
+    "import plotly.express as px\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "\n",
+    "import matplotlib.pyplot as plt"
    ]
   },
   {
@@ -85,27 +89,197 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
-     "ename": "DataNotLoadedError",
-     "evalue": "The data you are trying to access has not been loaded yet. See `Session.load`",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mDataNotLoadedError\u001b[0m                        Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[18], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m session\u001b[39m.\u001b[39;49mlaps\n\u001b[1;32m      3\u001b[0m \u001b[39m#fastf1.get_event_schedule(2017)\u001b[39;00m\n",
-      "File \u001b[0;32m~/.pyenv/versions/3.10.6/envs/f1-binottor/lib/python3.10/site-packages/fastf1/core.py:1074\u001b[0m, in \u001b[0;36mSession.laps\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m   1068\u001b[0m \u001b[39m@property\u001b[39m\n\u001b[1;32m   1069\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mlaps\u001b[39m(\u001b[39mself\u001b[39m) \u001b[39m-\u001b[39m\u001b[39m>\u001b[39m \u001b[39m\"\u001b[39m\u001b[39mLaps\u001b[39m\u001b[39m\"\u001b[39m:\n\u001b[1;32m   1070\u001b[0m \u001b[39m    \u001b[39m\u001b[39m\"\"\":class:`Laps`: All laps from all drivers driven in this session.\u001b[39;00m\n\u001b[1;32m   1071\u001b[0m \n\u001b[1;32m   1072\u001b[0m \u001b[39m    Data is available after calling `Session.load` with ``laps=True``\u001b[39;00m\n\u001b[1;32m   1073\u001b[0m \u001b[39m    \"\"\"\u001b[39;00m\n\u001b[0;32m-> 1074\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_get_property_warn_not_loaded(\u001b[39m'\u001b[39;49m\u001b[39m_laps\u001b[39;49m\u001b[39m'\u001b[39;49m)\n",
-      "File \u001b[0;32m~/.pyenv/versions/3.10.6/envs/f1-binottor/lib/python3.10/site-packages/fastf1/core.py:1047\u001b[0m, in \u001b[0;36mSession._get_property_warn_not_loaded\u001b[0;34m(self, name)\u001b[0m\n\u001b[1;32m   1045\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39m_get_property_warn_not_loaded\u001b[39m(\u001b[39mself\u001b[39m, name):\n\u001b[1;32m   1046\u001b[0m     \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39mhasattr\u001b[39m(\u001b[39mself\u001b[39m, name):\n\u001b[0;32m-> 1047\u001b[0m         \u001b[39mraise\u001b[39;00m DataNotLoadedError(\u001b[39m\"\u001b[39m\u001b[39mThe data you are trying to access has not \u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m   1048\u001b[0m                                  \u001b[39m\"\u001b[39m\u001b[39mbeen loaded yet. See `Session.load`\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[1;32m   1049\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mgetattr\u001b[39m(\u001b[39mself\u001b[39m, name, \u001b[39mNone\u001b[39;00m)\n",
-      "\u001b[0;31mDataNotLoadedError\u001b[0m: The data you are trying to access has not been loaded yet. See `Session.load`"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/7r/dg7644r91fsfzzv3xfr9pzt80000gn/T/ipykernel_56522/655821644.py:1: DtypeWarning: Columns (29) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "  big_laps = pd.read_csv(\"../raw_data/laps.csv\")\n"
      ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Compound</th>\n",
+       "      <th>Year</th>\n",
+       "      <th>LapNumber</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>72</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>130</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>188</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17636</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17688</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17741</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17794</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17847</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>344 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      Compound  Year  LapNumber\n",
+       "0          NaN  2018        1.0\n",
+       "14         NaN  2018        1.0\n",
+       "72         NaN  2018        1.0\n",
+       "130        NaN  2018        1.0\n",
+       "188        NaN  2018        1.0\n",
+       "...        ...   ...        ...\n",
+       "17636      NaN  2018        1.0\n",
+       "17688      NaN  2018        1.0\n",
+       "17741      NaN  2018        1.0\n",
+       "17794      NaN  2018        1.0\n",
+       "17847      NaN  2018        1.0\n",
+       "\n",
+       "[344 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "session.laps\n",
+    "big_laps = pd.read_csv(\"../raw_data/laps.csv\")\n",
     "\n",
-    "#fastf1.get_event_schedule(2017)"
+    "#fastf1.get_event_schedule(2017)\n",
+    "#big_laps['Compound'].fillna(method=\"bfill\",limit=3,inplace=True)\n",
+    "\n",
+    "big_laps[['Compound','Year',\"LapNumber\"]][big_laps['Compound'].isna() & big_laps['LapNumber']==1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "start_2023 = big_laps[(big_laps['LapNumber']==1) & (big_laps['Year']==2018)]\n",
+    "start_before = big_laps[(big_laps['LapNumber']==2) & (big_laps['Year']<2023)]\n",
+    "\n",
+    "big_laps['Compound'][big_laps['Compound'].isna()].count()\n",
+    "#plt.hist(start_2023['Compound'])\n",
+    "#plt.hist(start_before['Compound'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['Unnamed: 0', 'Time', 'Driver', 'DriverNumber', 'LapTime', 'LapNumber',\n",
+       "       'Stint', 'PitOutTime', 'PitInTime', 'Sector1Time', 'Sector2Time',\n",
+       "       'Sector3Time', 'Sector1SessionTime', 'Sector2SessionTime',\n",
+       "       'Sector3SessionTime', 'SpeedI1', 'SpeedI2', 'SpeedFL', 'SpeedST',\n",
+       "       'IsPersonalBest', 'Compound', 'TyreLife', 'FreshTyre', 'Team',\n",
+       "       'LapStartTime', 'LapStartDate', 'TrackStatus', 'Position', 'Deleted',\n",
+       "       'DeletedReason', 'FastF1Generated', 'IsAccurate', 'Location', 'Year'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "start_before = big_laps[(big_laps['LapNumber']==4)]\n",
+    "start_before.columns"
    ]
   },
   {
