--- a/notebooks/rain_gp.ipynb
+++ b/notebooks/rain_gp.ipynb
@@ -414,6 +414,34 @@
     "df = df[~rainy_gp]\n",
     "df"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['Unnamed: 0', 'Time', 'Driver', 'DriverNumber', 'LapTime', 'LapNumber',\n",
+       "       'Stint', 'PitOutTime', 'PitInTime', 'Sector1Time', 'Sector2Time',\n",
+       "       'Sector3Time', 'Sector1SessionTime', 'Sector2SessionTime',\n",
+       "       'Sector3SessionTime', 'SpeedI1', 'SpeedI2', 'SpeedFL', 'SpeedST',\n",
+       "       'IsPersonalBest', 'Compound', 'TyreLife', 'FreshTyre', 'Team',\n",
+       "       'LapStartTime', 'LapStartDate', 'TrackStatus', 'Position', 'Deleted',\n",
+       "       'DeletedReason', 'FastF1Generated', 'IsAccurate', 'Location', 'Year',\n",
+       "       'LocationYear'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.columns"
+   ]
   }
  ],
  "metadata": {
