Save for pushing

--- a/notebooks/model_trials.ipynb
+++ b/notebooks/model_trials.ipynb
@@ -10,18 +10,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 83,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2023-06-08 10:22:49.577011: I tensorflow/core/platform/cpu_feature_guard.cc:182] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
-      "To enable the following instructions: AVX2 FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -31,7 +22,7 @@
     "from imblearn.combine import SMOTETomek\n",
     "\n",
     "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.metrics import f1_score, accuracy_score\n",
+    "from sklearn.metrics import f1_score, accuracy_score, precision_score\n",
     "from sklearn.pipeline import make_pipeline\n",
     "from sklearn.compose import make_column_transformer\n",
     "from sklearn.preprocessing import OneHotEncoder, MinMaxScaler, RobustScaler\n",
@@ -5387,6 +5378,14 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Faire un dropout / Mettre en L1 / Augmenter les neurones / Faire une confusion matrix / Faire les courbes d'apprentissage "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 53,
    "metadata": {},
@@ -5478,7 +5477,7 @@
     }
    ],
    "source": [
-    "model.fit(X_train_preproc_resamp, y_train_resamp, batch_size=128, epochs=100, validation_data=(X_val_preproc, y_val), callbacks=[es])"
+    "model.fit(X_train_preproc_resamp, y_train_resamp, batch_size=256, epochs=100, validation_data=(X_val_preproc, y_val), callbacks=[es])"
    ]
   },
   {
@@ -5496,6 +5495,32 @@
    ],
    "source": [
     "y_pred = model.predict(X_test_preproc)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.05218308],\n",
+       "       [0.00406589],\n",
+       "       [0.06820451],\n",
+       "       ...,\n",
+       "       [0.03799183],\n",
+       "       [0.06002471],\n",
+       "       [0.16868575]], dtype=float32)"
+      ]
+     },
+     "execution_count": 86,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_pred"
    ]
   },
   {
@@ -6637,7 +6662,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Baselines with 3 layers / 64 neurons / batch_size 256 / 10 patience / X epochs"
+    "### Baselines with 3 layers / 64 neurons / batch_size 128 / 10 patience / X epochs"
    ]
   },
   {
@@ -6680,6 +6705,44 @@
    "source": [
     "third_f1 = f1_score(y_test, y_pred_encode)\n",
     "third_f1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/etienneginoux/.pyenv/versions/3.10.6/envs/f1-binottor/lib/python3.10/site-packages/sklearn/metrics/_classification.py:1344: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 due to no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, msg_start, len(result))\n"
+     ]
+    }
+   ],
+   "source": [
+    "third_precision = precision_score(y_test, y_pred_encode)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.0"
+      ]
+     },
+     "execution_count": 85,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "third_precision"
    ]
   },
   {
