--- a/drafts/tire_compound_1.ipynb
+++ b/drafts/tire_compound_1.ipynb
@@ -485,17 +485,53 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "laps.drop(columns=[\"Unnamed: 0.1\",\n",
+    "                   \"Time\",\n",
+    "                   \"DriverNumber\",\n",
+    "                   \"LapTime\",\n",
+    "                   \"Stint\", \n",
+    "                   \"PitOutTime\", \n",
+    "                   \"PitInTime\", \n",
+    "                   \"Sector1Time\",\n",
+    "                   \"Sector2Time\", \n",
+    "                   \"Sector3Time\", \n",
+    "                   \"Sector1SessionTime\",\n",
+    "                   \"Sector2SessionTime\", \n",
+    "                   \"Sector3SessionTime\", \n",
+    "                   \"SpeedI1\", \n",
+    "                   \"SpeedI2\",\n",
+    "                   \"SpeedFL\",\n",
+    "                   \"SpeedST\",\n",
+    "                   \"LapStartTime\",\n",
+    "                   \"LapStartDate\",\n",
+    "                   \"TrackStatus\",\n",
+    "                   \"Deleted\", \n",
+    "                   \"DeletedReason\", \n",
+    "                   \"FastF1Generated\", \n",
+    "                   \"IsAccurate\",\n",
+    "                   \"status_list\",\n",
+    "                \n",
+    "\n",
+    "        \n",
+    "                   ,\n",
+    "                ], inplace = True)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
-    "cat_features = [\"Driver\", \"Team\", \"IsPersonalBest\", \"FreshTyre\",\"Location\", \n",
-    "                \"LocationYear\", 'second_compound', 'Rainfall', 'Compound', 'close_ahead', 'close_behind', 'is_pitting_ahead','is_pitting_behind']\n",
+    "cat_features = [\"Driver\", \"Team\", \"IsPersonalBest\", \"Location\", \n",
+    "'second_compound', 'Compound', 'close_ahead', 'close_behind', 'is_pitting_ahead','is_pitting_behind']\n",
     "cat_features_preproc = make_pipeline(OneHotEncoder(sparse=False, handle_unknown=\"ignore\"))\n",
-    "num_features = [\"LapNumber\", \"TyreLife\", \"Position\", \"TotalLaps\", \"TyreStressLevel\", \n",
-    "                \"pitting_this_lap\", \"RaceProgress\", \"Year\", 'LastTeamRanking','status',\n",
-    "                'AirTemp', 'Humidity', 'Pressure', 'TrackTemp',\n",
-    "       'WindDirection', 'WindSpeed', 'Final_Position', 'pitting_next_lap', ]\n",
+    "num_features = [\"LapNumber\", \"TyreLife\", \"Position\", \"TyreStressLevel\", \"RaceProgress\", \"Year\", 'LastTeamRanking','status',\n",
+    "                'TrackTemp', 'pitting_next_lap', ]\n",
     "num_features_preproc = make_pipeline(RobustScaler())"
    ]
   },
